--- a/webapp/templates/register.vm
+++ b/webapp/templates/register.vm
@@ -16,6 +16,7 @@
 			<input type="text" id="department" name="department" value="" />
 			<label for="title">Title</label>
 			<input type="text" id="title" name="title" value="" />
+			<button type="submit">Register</button>
 		</form>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
