Add logic to list errors if any

--- a/webapp/templates/register.vm
+++ b/webapp/templates/register.vm
@@ -7,7 +7,14 @@
 	</head>
 	<body>
 		<h1>WKNYC.COM Registration Form</h1>
-		<form method="POST" action="wk/v1/users/register">
+		#if ($errors.size() > 0)
+			<ul>
+				#foreach($error in $errors)
+				<li>$error.message()</li>
+				#end
+			</ul>
+		#end
+		<form method="POST" action="credentials/register">
 			<label for="username">Username</label>
 			<input type="text" id="username" name="username" value="" />
 			<label for="password">Password</label>
