Update ImageServlet to save ImageAsset
The code for actually saving the assets is ugly and needs to be cleaned
up but it does in fact save content to the repository if there is a
logged in user in the session.

--- a/webapp/templates/assets/imageUpload.vm
+++ b/webapp/templates/assets/imageUpload.vm
@@ -14,6 +14,9 @@
 				#end
 			</ul>
 		#end
+		#if (!$uuid.isEmpty())
+			<p>Successfully saved ImageAsset with uuid: $uuid.get()</p>
+		#end
 		<form method="POST" action="/assets/imageUpload" enctype="multipart/form-data">
 			<input type="hidden" name="name" id="name" value="stupid" />
 			<label for="full">Full Size Image</label><input type="file" id="full" name="full" />
