Major rewrite of CaseStudy implementation
Split CaseStudy into two parts, BasicCaseStudy and AssetCaseStudy.
BasicCaseStudy is just the first page of data, with no assets attached.
AssetCaseStudy adds the image and press assets to the object. Added
an empty implementation of DownloadableAsset to use when saving
CaseStudy initially.

--- a/webapp/templates/client/caseStudy-basic.vm
+++ b/webapp/templates/client/caseStudy-basic.vm
@@ -45,7 +45,7 @@
 					</div>
 				</fieldset>
 				<fieldset class="displayOnSite">
-					<label>Display on site?</label> <input type="radio" id="displayOnSiteRadio-on" name="displayOnSiteRadio"><input type="radio" id="displayOnSiteRadio-off" name="displayOnSiteRadio">
+					<label>Display on site?</label> <input type="radio" id="displayOnSiteRadio-on" name="displayOnSiteRadio" value="true"/><input type="radio" id="displayOnSiteRadio-off" name="displayOnSiteRadio" value="false"/>
 				</fieldset>
 				<fieldset class="hide">
 					<input type="submit" value="Submit">
