--- a/webapp/templates/client/client.vm
+++ b/webapp/templates/client/client.vm
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>Client</h1>
-		<form action="/client">
+		<form action="/client" method="post">
 			<label for="name">Name</label>
 			<input type="text" name="name" id="name" />
 			<button type="submit">Add Client</button>
