--- a/webapp/templates/client/client.vm
+++ b/webapp/templates/client/client.vm
@@ -8,7 +8,8 @@
 		<h1>Client</h1>
 		<form action="/client" method="post">
 			<label for="name">Name</label>
-			<input type="text" name="name" id="name" />
+			<input type="hidden" name="uuid" id="uuid" value="$!{client.uuid().get()}" />
+			<input type="text" name="name" id="name" value="$!{$client.name()}" />
 			<button type="submit">Add Client</button>
 		</form>
 	</body>
