--- a/webapp/templates/client/client.vm
+++ b/webapp/templates/client/client.vm
@@ -7,9 +7,9 @@
 	<body>
 		<h1>Client</h1>
 		<form action="/client" method="post">
-			<label for="name">Name</label>
 			<input type="hidden" name="uuid" id="uuid" value="$!{client.uuid().get()}" />
-			<input type="text" name="name" id="name" value="$!{$client.name()}" />
+			<label for="name">Name</label>
+			<input type="text" name="name" id="name" value="$!{client.name()}" />
 			<button type="submit">Add Client</button>
 		</form>
 	</body>
