--- a/bin/templates/casestudy/list.json.vm
+++ b/bin/templates/casestudy/list.json.vm
@@ -3,7 +3,8 @@
 	#foreach ($study in $studies)
 		{
 			name: $study.name(),
-			description: $study.description()
+			description: $study.description(),
+			id: $study.uuid().get()
 		}
 		#if ($studies.size() != $velocityCount) , #end
 	#end
