--- a/bin/templates/register.vm
+++ b/bin/templates/register.vm
@@ -22,8 +22,8 @@
 			<input type="text" id="username" name="username" value="" />
 			<label for="password">Password</label>
 			<input type="password" id="password" name="password" value="" />
-			<label for="department">Department</label>
-			<input type="text" id="department" name="department" value="" />
+			<label for="department">Role</label>
+			<input type="text" id="role" name="role" value="" />
 			<label for="title">Title</label>
 			<input type="text" id="title" name="title" value="" />
 			<button type="submit">Register</button>
