--- a/bin/templates/user/list.json.vm
+++ b/bin/templates/user/list.json.vm
@@ -2,10 +2,12 @@
 	users: [
 	#foreach ($user in $users)
 		{
-			name: $user.username(),
-			role: $user.role().display(),
-			title: $user.title(),
-			id: $user.uuid().get()
+			username: '$user.username()',
+			role: '$user.role().display()',
+			title: '$user.title()',
+			id: '$user.uuid().get()',
+			firstName: '$user.firstName()',
+			lastName: '$user.lastName()',
 		}
 		#if ($users.size() != $velocityCount) , #end
 	#end
