--- a/bin/templates/user/edit.html.vm
+++ b/bin/templates/user/edit.html.vm
@@ -15,6 +15,8 @@
 				<input type="text" id="username" name="username" value="$!{user.username()}" />
 				<label for="password">Password</label>
 				<input type="password" id="password" name="password" value="" />
+				<label for="confirmPassword">Confirm Password</label>
+				<input type="password" id="confirmPassword" name="confirmPassword" value="" />
 				<label for="department">Role</label>
 				<input type="text" id="role" name="role" value="$!{user.role().display()}" />
 				<label for="title">Title</label>
