--- a/bin/templates/client/client-list.json.vm
+++ b/bin/templates/client/client-list.json.vm
@@ -1,3 +1,11 @@
 {
-	'test':'test123'
+	clients: [
+		#foreach ($client in $clients)
+			{
+				'name': $client.name(),
+				'id': $client.uuid().get()
+			}
+			#if ($clients.size() != $velocityCount) , #end
+		#end
+	]
 }
