Define and implement ClientEditServlet
Add Client Edit servlet definition to web.xml. Implement
ClientEditServlet for the specific edit case. Create new view specific
to editing clients. Update CaseStudyServlet to fetch the payload of
ClientManager.get which now returns a Response object rather than a bare
Client. This should be 'safe' because the Client id is from a select
list.

--- a/bin/templates/client/client-edit.vm
+++ b/bin/templates/client/client-edit.vm
@@ -2,18 +2,18 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
-		<title>Client</title>
+		<title>Edit Client</title>
 	</head>
 	<body>
-		<h1>Client</h1>
+		<h1>Edit Client</h1>
 		#if ($client.isDefined())
 			#set($client = $client.get())
 		#end
-		<form action="/client" method="post">
+		<form action="/client/edit" method="post">
 			<input type="hidden" name="uuid" id="uuid" value="$!{client.uuid().get()}" />
 			<label for="name">Name</label>
 			<input type="text" name="name" id="name" value="$!{client.name()}" />
-			<button type="submit">Add Client</button>
+			<button type="submit">Update Client</button>
 		</form>
 	</body>
 </html>
